...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonRepeat"
            app:layout_constraintVertical_bias="0.39" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/cameraPreview"
            android:name="de.efdis.tangenerator.gui.qrscanner.BankingQrCodeScannerFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
...
