<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/verify_transaction_details_title"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/verify_transaction_details_title"
        tools:context=".gui.transaction.VerifyTransactionDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/verify_transaction_details_title" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/instructionVerifyData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/transactionDataContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelTransactionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    tools:text="transaction type" />

                <TextView
                    android:id="@+id/labelDataElement1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="label 1" />

                <TextView
                    android:id="@+id/contentDataElement1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    tools:text="content 1" />

                <TextView
                    android:id="@+id/labelDataElement2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="label 2" />

                <TextView
                    android:id="@+id/contentDataElement2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    tools:text="content 2" />

                <TextView
                    android:id="@+id/labelDataElement3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="label 3" />

                <TextView
                    android:id="@+id/contentDataElement3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    tools:text="content 3" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/generatedTanContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:visibility="gone"
                app:cardUseCompatPadding="true"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/instructionEnterTAN"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_tan_onlinebanking"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="?attr/colorOnSurface"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/atcContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tanContainer">

                        <TextView
                            android:id="@+id/labelATC"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="0dp"
                            android:paddingEnd="8dp"
                            android:text="@string/labelATC"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:textColor="?attr/colorOnSurface" />

                        <TextView
                            android:id="@+id/textATC"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/AppTheme.TextAppearance.TAN"
                            android:typeface="monospace"
                            tools:text="42" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tanContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/instructionEnterTAN">

                        <TextView
                            android:id="@+id/labelTAN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="0dp"
                            android:paddingEnd="8dp"
                            android:text="@string/labelTAN"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:textColor="?attr/colorOnSurface" />

                        <TextView
                            android:id="@+id/textTAN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textAppearance="@style/AppTheme.TextAppearance.TAN"
                            tools:text="123456" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/exhaustedGeneratorHintContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:visibility="gone"
                app:cardUseCompatPadding="true"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/exhaustedIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:scaleType="fitCenter"
                        app:tint="?attr/colorOnSurface"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_material_action_perm_device_information" />

                    <TextView
                        android:id="@+id/exhaustedLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/soon_exhausted_generator_label"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textColor="?attr/colorOnSurface"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/exhaustedIcon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/exhaustedDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/soon_exhausted_generator_description"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/exhaustedLabel"
                        app:layout_constraintTop_toBottomOf="@+id/exhaustedLabel" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:baselineAligned="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorButtonNormal"
            android:elevation="0dp"
            android:onClick="onButtonCancel"
            android:text="@android:string/cancel"
            android:textColor="?android:attr/textColorPrimary" />

        <Button
            android:id="@+id/validateButton"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonValidate"
            android:text="@string/confirm_transaction_details_and_release_transaction" />

    </LinearLayout>


    <TextView
        android:id="@+id/instructionVerifyData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="?android:attr/textColorSecondary"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="please check details / confirm the order" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>