...
    <string name="verify_transaction_with_details">Bitte die Auftragsdaten auf Richtigkeit prüfen</string>
    <string name="verify_transaction_without_details">Bitte den Auftrag bestätigen</string>
    <string name="synchronize_tan_generator">TAN-Generator synchronisieren</string>
    <string name="labelTAN">TAN</string>
    <string name="labelATC">ATC</string>
    <string name="no_tokens_available_title">TAN-Generator</string>
    <string name="choose_token_title">TAN-Generator wählen</string>
    <string name="token_name_and_serial_number_format">%1$s\n(%2$s)</string>
    <string name="no_tokens_available_message">
        Dieses Gerät wurde noch nicht aktiviert.
        Wenn eine frühere Aktivierung verloren gegangen ist,
        kann es daran liegen, dass der Geräte-Sperrbildschirm deaktiviert worden ist
        (siehe Anleitung / Sicherheit).
...
